# fc-nixos-release-tools

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  auto-merge-config.toml  flake.nix  pyproject.toml  release
.github/workflows/: auto-merge.yaml  run-tests.yaml  update-nixpkgs.yaml
auto_merge/: config.toml  pyproject.toml
auto_merge/src/auto_merge/: check_pr.py  cli.py  config.py  utils.py
auto_merge/tests/: test_utils.py
db/: README
src/: gh_get_app_token.py
src/auto_merge/: check_pr.py  config.py  merge.py  utils.py
src/auto_merge/tests/: test_utils.py
src/release/: __init__.py  branch.py  command.py  common.py  doc.py  git.py  markdown.py  release.py  state.py  utils.py
src/update_nixpkgs/: __init__.py  cleanup.py  update.py
src/utils/: timeout.py
