[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80

[tool.ruff]
line-length = 80

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fc-nixos-release-tools"
dynamic = ["version"]
requires-python = ">= 3.11"
# KEEP SORTED!
dependencies = [
    "gitpython>=3.1",
    "gql[requests]~=3.5",
    "pydantic>=2.11.3",
    "pygithub>=2.5",
    "python-dateutil>=2.9",
    "requests[socks]>=2.32",
    "rich>=13.8",
]
# KEEP SORTED!

[dependency-groups]
dev = [
  "pytest>=7.4"
]

[project.scripts]
release = "release:main"
update-nixpkgs = "update_nixpkgs:main"
auto-merge = "auto_merge:main"

[tool.pytest.ini_options]
testpaths = ["src"]
